# ComPWA

./: .travis.yml  AsciiDataIO_8cpp.html  AsciiDataIO_8cpp.js  AsciiDataIO_8cpp__incl.map  AsciiDataIO_8cpp__incl.md5  AsciiDataIO_8cpp_source.html  AsciiDataIO_8hpp.html  AsciiDataIO_8hpp.js  AsciiDataIO_8hpp__dep__incl.map  AsciiDataIO_8hpp__dep__incl.md5  AsciiDataIO_8hpp__incl.map  AsciiDataIO_8hpp__incl.md5  AsciiDataIO_8hpp_source.html  BOSSAdapter_8cpp.html  BOSSAdapter_8cpp__incl.map  BOSSAdapter_8cpp__incl.md5  BOSSAdapter_8cpp_source.html  BOSSAdapter_8hpp.html  BOSSAdapter_8hpp.js  BOSSAdapter_8hpp__dep__incl.map  BOSSAdapter_8hpp__dep__incl.md5  BOSSAdapter_8hpp__incl.map  BOSSAdapter_8hpp__incl.md5  BOSSAdapter_8hpp_source.html  BuilderXML_8cpp.html  BuilderXML_8cpp.js  BuilderXML_8cpp__incl.map  BuilderXML_8cpp__incl.md5  BuilderXML_8cpp_source.html  BuilderXML_8hpp.html  BuilderXML_8hpp.js  BuilderXML_8hpp__dep__incl.map  BuilderXML_8hpp__dep__incl.md5  BuilderXML_8hpp__incl.map  BuilderXML_8hpp__incl.md5  BuilderXML_8hpp_source.html  CMakeLists.txt  ChiOneD_8cpp.html  ChiOneD_8cpp__incl.map  ChiOneD_8cpp__incl.md5  (+1623 more)
cpp/Core/: CMakeLists.txt  FunctionGraph.cpp  FunctionGraph.hpp  GeneralizedFunctionGraph.cpp  GeneralizedFunctionGraph.hpp  Particle.cpp  Particle.hpp  Utils.hpp  VectorizedEvaluator.cpp  VectorizedEvaluator.hpp
cpp/Core/FunctionGraph/: CMakeLists.txt  FunctionGraph.cpp  FunctionGraph.hpp  FunctionGraphBuilder.cpp  FunctionGraphBuilder.hpp  FunctionWrapper.cpp  FunctionWrapper.hpp  VectorizedEvaluator.cpp  VectorizedEvaluator.hpp
(+311 files in other folders)
